@@ -30,6 +30,11 @@ Version 8.35-RC1 xx-xxxx-201x
     above a certain treshold (e.g: 256). The only limitation is that the value
     must be bigger than the treshold as well. This function is useful, when
     the characters above the treshold are handled in the same way.
+    
+7.  The macros RAWUCHAR and RAWUCHARTEST were identical (and the latter was not
+    testing anything, contrary to its name and comment) and were not really 
+    fulfilling any useful function, so I have replaced their use by plain code. 
+    Similarly for RAWUCHARINC and RAWUCHARINCTEST.  
 
 
 Version 8.34 15-December-2013
